--- a/crates/bevy-inspector-egui/Cargo.toml
+++ b/crates/bevy-inspector-egui/Cargo.toml
@@ -89,6 +89,7 @@ bevy = { version = "0.16.0", default-features = false, features = [
     "ktx2",
 ] }
 egui_dock = "0.17"
+egui = { version = "0.32", features = ["callstack"] }
 bevy_math = { version = "0.16.0", features = ["mint"] }
 # transform-gizmo-egui = "0.6"
 # bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking", rev = "554649a951689dce66d0d759839b326874e8826f", default-features = false, features = ["backend_raycast", "backend_egui", "backend_sprite"] }
